# fairfield-county-event-calendar

./: .gitignore  DEPLOY.md  Makefile  README.md  SPEC.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  dedup.py  expire.py  main.py  models.py  schemas.py  utils.py
backend/app/api/: admin.py  events.py  submissions.py  tips.py  towns.py
backend/ingest/: push_remote.py  runner.py  sources.yaml  verify_sources.py
backend/ingest/connectors/: base.py  ical_feed.py
backend/tests/: conftest.py  test_dedup.py  test_runner_filters.py
backend/tests/fixtures/: town_sample.ics
backend/tests/test_api/: test_admin.py  test_events.py  test_ingest_push.py  test_submissions.py  test_tips.py
backend/tests/test_connectors/: test_ical_feed.py
deploy/: .env.example  Caddyfile  docker-compose.yml  web.Dockerfile
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts.timestamp-1783533464519-245e2fabf3d22.mjs
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: AdminPage.tsx  EventDetailPage.tsx  EventsPage.tsx  SubmitPage.tsx  TipsPage.tsx
